innovatech/k8s/base/arc-controller.yaml
Pulled: ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller:0.9.3
Digest: sha256:4fda46fd8c4e08fe2e3d47340573f98d7a9eeb4c3a474b0e2b08057ab24d50a9
---
# Source: gha-runner-scale-set-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-gha-rs-controller
  namespace: arc-systems
  labels:
    helm.sh/chart: gha-rs-controller-0.9.3
    app.kubernetes.io/name: gha-rs-controller
    app.kubernetes.io/namespace: arc-systems
    app.kubernetes.io/instance: arc
    app.kubernetes.io/version: "0.9.3"
    app.kubernetes.io/part-of: gha-rs-controller
    app.kubernetes.io/managed-by: Helm
    actions.github.com/controller-service-account-namespace: arc-systems
    actions.github.com/controller-service-account-name: arc-gha-rs-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gha-rs-controller
      app.kubernetes.io/namespace: arc-systems
      app.kubernetes.io/instance: arc
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: "manager"
      labels:
        app.kubernetes.io/part-of: gha-rs-controller
        app.kubernetes.io/component: controller-manager
        app.kubernetes.io/version: 0.9.3
        app.kubernetes.io/name: gha-rs-controller
        app.kubernetes.io/namespace: arc-systems
        app.kubernetes.io/instance: arc
    spec:
      serviceAccountName: arc-gha-rs-controller
      containers:
      - name: manager
        image: "ghcr.io/actions/gha-runner-scale-set-controller:0.9.3"
        imagePullPolicy: IfNotPresent
        args:
        - "--auto-scaling-runner-set-only"
        - "--log-level=debug"
        - "--log-format=text"
        - "--update-strategy=immediate"
        - "--listener-metrics-addr=0"
        - "--listener-metrics-endpoint="
        - "--metrics-addr=0"
        command:
        - "/manager"
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      terminationGracePeriodSeconds: 10
      volumes:
      - name: tmp
        emptyDir: {}
