innovatech/k8s/base/bind9-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bind9-dns
  namespace: production
  labels:
    app: bind9-dns
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bind9-dns
  template:
    metadata:
      labels:
        app: bind9-dns
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: bind9-dns
      #nodeSelector:
      #  kubernetes.io/hostname: ehv2-prod-k8s-0001
      containers:
        - name: bind9
          image: internetsystemsconsortium/bind9:9.18
          ports:
            - name: dns-udp
              containerPort: 53
              hostPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              hostPort: 53
              protocol: TCP
          volumeMounts:
            - name: named-conf
              mountPath: /etc/bind/named.conf
              subPath: named.conf
            - name: zone-file
              mountPath: /etc/bind/zones/db.innovatech.arpa
              subPath: db.innovatech.arpa
      volumes:
        - name: named-conf
          configMap:
            name: bind9-config
            items:
              - key: named.conf
                path: named.conf
        - name: zone-file
          configMap:
            name: bind9-config
            items:
              - key: db.innovatech.arpa
                path: db.innovatech.arpa
