innovatech/k8s/base/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  rules:
    - host: grafana.innovatech.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: victoriametrics.innovatech.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoriametrics
                port:
                  number: 8428
